--- a/Home.html
+++ b/Home.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="Home/Footer/sectionfooter.css">
 </head>
 
-
 <header>
     <div class="container-topnav">
         <nav class="d-flex1">
@@ -29,7 +28,15 @@
                             <li><a href="#" class="active">API and Scalling Docs</a></li>
                             <li><a href="#" class="active">App Usage Manual</a></li>
                             <li><a href="#" class="active">Contributing Guidelines</a></li>  
-                        </ul>
+
+                            <li><a href="#" class="active">API List v2.0</a></li>
+                            <li><a href="#" class="active">LMS v1.0 Installation and Docs</a></li>
+                            <li><a href="#" class="active">LMS v1.0 User Access Role</a></li>
+                            <li><a href="#" class="active">LMS v2.0 Installation and Docs</a></li>
+                            <li><a href="#" class="active">LMS v2.0 User Access Role</a></li>
+                            <li><a href="#" class="active">WebXR v1.0 App Usage Manual</a></li>
+                            <li><a href="#" class="active">XR App Installation Guide</a></li>
+                            <li><a href="#" class="active">XR App Usage Manual</a></li>                        </ul>
                     </li>
                 </ul>
             </div>
