--- a/Home.html
+++ b/Home.html
@@ -86,7 +86,7 @@
         </div>
 
         <div class="section-title">
-            <h1>Have a Question?</h1>
+            <h1>Have a Questions?</h1>
             <div class="search-box">
                 <input  class="search-txt"
                         type="text" name=""
