--- a/Home.html
+++ b/Home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Stock Knwoledge Home</title>
+    <title>Stock Knowledge Home</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="Home/Header/topnav.css">
@@ -20,23 +20,20 @@
             <div class="navigation-bar">
                 <ul>
                     <li><a href="Home.html" class="active">Home</a></li>
-                    <li><a href="Docs/Docs.html">Docs</a></li>
+                    <li><a href="Docs.html">Docs</a></li>
                     <li><a href="#"><i class="fa fa-caret-down" aria-hidden="true"></i></a>
                         <ul>
-                            <li><a href="#" class="active">LMS Installation and Docs</a></li>
-                            <li><a href="#" class="active">User Access Role</a></li>
-                            <li><a href="#" class="active">API and Scalling Docs</a></li>
-                            <li><a href="#" class="active">App Usage Manual</a></li>
-                            <li><a href="#" class="active">Contributing Guidelines</a></li>  
-
                             <li><a href="#" class="active">API List v2.0</a></li>
+                            <li><a href="#" class="active">API and Scaling Docs</a></li>
+                            <li><a href="#" class="active">Contributing Guidelines</a></li>
                             <li><a href="#" class="active">LMS v1.0 Installation and Docs</a></li>
                             <li><a href="#" class="active">LMS v1.0 User Access Role</a></li>
                             <li><a href="#" class="active">LMS v2.0 Installation and Docs</a></li>
                             <li><a href="#" class="active">LMS v2.0 User Access Role</a></li>
                             <li><a href="#" class="active">WebXR v1.0 App Usage Manual</a></li>
                             <li><a href="#" class="active">XR App Installation Guide</a></li>
-                            <li><a href="#" class="active">XR App Usage Manual</a></li>                        </ul>
+                            <li><a href="#" class="active">XR App Usage Manual</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -51,7 +48,7 @@
                 <img src="images/main-hero.svg" alt="">
                 <h1>Stock Knowledge</h1>
                 <h3>Play to learn, learn to play!</h3>
-                <a href="./Docs/Docs.html">EXPLORE DOCS</a>
+                <a href="Docs.html">EXPLORE DOCS</a>
             </div>
             <div class="col-left1">
                 <img src="images/sk-1.svg" alt="">
@@ -86,7 +83,7 @@
         </div>
 
         <div class="section-title">
-            <h1>Have a Questions?</h1>
+            <h1>Have a Question?</h1>
             <div class="search-box">
                 <input  class="search-txt"
                         type="text" name=""
@@ -144,14 +141,14 @@
                     <p> Be a part of the <br> Stock Knowledge <br> community</p>
                 </div>
                 <div class="article-center">
-                    <img src="images/Developer-icon.png" alt="">
+                    <i class="fa fa-user fa-5x"></i>
                     <h1>For Developers </h1>
                     <a href="#">CLICK HERE</a>
                 </div>
                 <div class="article-right">
-                    <img src="images/User-icon.png" alt="">
+                    <i class="fa fa-user fa-5x"></i>
                     <h1>For Users</h1>
-                    <a href="#">CLICK HERE!!</a>
+                    <a href="#">CLICK HERE</a>
                 </div>
             </div>
         </div>
@@ -168,7 +165,7 @@
             </div>
             <div class="item">
                 <div class="footer-center">
-                    <a href="https://stockknowledge.org/">www.stockknowledge.org <br>stock.knowledge7@gmail.com</a>
+                    <a href="https://stockknowledge.org/">https://www.stockknowledge.org <br>stock.knowledge7@gmail.com</a>
                 </div>
             </div>
             <div class="item-social">
