--- a/Home.html
+++ b/Home.html
@@ -20,7 +20,7 @@
             <div class="navigation-bar">
                 <ul>
                     <li><a href="Home.html" class="active">Home</a></li>
-                    <li><a href="./Docs/Docs.html">Docs</a></li>
+                    <li><a href="/Docs/Docs.html">Docs</a></li>
                     <li><a href="#"><i class="fa fa-caret-down" aria-hidden="true"></i></a>
                         <ul>
                             <li><a href="#" class="active">API List v2.0</a></li>
