--- a/Home.html
+++ b/Home.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="Home/Body/searchbox.css">
     <link rel="stylesheet" href="Home/Body/sectionarticle.css">
     <link rel="stylesheet" href="Home/Footer/sectionfooter.css">
+
 </head>
 
 <header>
@@ -19,6 +20,7 @@
             <img src="images/logo.svg">
             <div class="navigation-bar">
                 <ul>
+                    <li><a href="Docs.html">docs?</a></li>
                     <li><a href="Home.html" class="active">Home</a></li>
                     <li><a href="Docs/Docs.html">Docs</a></li>
                     <li><a href="#"><i class="fa fa-caret-down" aria-hidden="true"></i></a>
