--- a/Home.html
+++ b/Home.html
@@ -161,7 +161,7 @@
         <div class="service-item d-flex3">
             <div class="item">
                 <div class="footer-left">
-                    <img src="/images/logo.svg">
+            <img src="./images/logo.svg">
                 </div>
             </div>
             <div class="item">
