--- a/Home.html
+++ b/Home.html
@@ -24,9 +24,9 @@
                     <li><a href="Docs/Docs.html">Docs</a></li>
                     <li><a href="#"><i class="fa fa-caret-down" aria-hidden="true"></i></a>
                         <ul>
-                            <li><a href="#" class="active">API List v2.0</a></li>
-                            <li><a href="#" class="active">API and Scaling Docs</a></li>
-                            <li><a href="#" class="active">Contributing Guidelines</a></li>
+                            <li><a href="./Docs/Sidebar/API List v2.0/APIList1-Topic.html" class="active">API List v2.0</a></li>
+                            <li><a href="./Docs/Sidebar/Endpoints/End-Add.html" class="active">API and Scaling Docs</a></li>
+                            <li><a href="./Docs/Sidebar/Contributing Guidelines/Contributing_Guidelines.html" class="active">Contributing Guidelines</a></li>
                             <li><a href="#" class="active">LMS v1.0 Installation and Docs</a></li>
                             <li><a href="#" class="active">LMS v1.0 User Access Role</a></li>
                             <li><a href="#" class="active">LMS v2.0 Installation and Docs</a></li>
@@ -34,6 +34,7 @@
                             <li><a href="#" class="active">WebXR v1.0 App Usage Manual</a></li>
                             <li><a href="#" class="active">XR App Installation Guide</a></li>
                             <li><a href="#" class="active">XR App Usage Manual</a></li>
+
                         </ul>
                     </li>
                 </ul>
