--- a/Home.html
+++ b/Home.html
@@ -5,12 +5,12 @@
     <title>Stock Knowledge Home</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" href="/Home/Header/topnav.css">
-    <link rel="stylesheet" href="/Home/Body/sectionhome.css">
-    <link rel="stylesheet" href="/Home/Body/sectionitem.css">
-    <link rel="stylesheet" href="/Home/Body/searchbox.css">
-    <link rel="stylesheet" href="/Home/Body/sectionarticle.css">
-    <link rel="stylesheet" href="/Home/Footer/sectionfooter.css">
+    <link rel="stylesheet" href="Home/Header/topnav.css">
+    <link rel="stylesheet" href="Home/Body/sectionhome.css">
+    <link rel="stylesheet" href="Home/Body/sectionitem.css">
+    <link rel="stylesheet" href="Home/Body/searchbox.css">
+    <link rel="stylesheet" href="Home/Body/sectionarticle.css">
+    <link rel="stylesheet" href="Home/Footer/sectionfooter.css">
 
 
 </head>
