--- a/Home.html
+++ b/Home.html
@@ -26,15 +26,15 @@
                     <li><a href="#"><i class="fa fa-caret-down" aria-hidden="true"></i></a>
                         <ul>
                             <li><a href="./Docs/Sidebar/API List v2.0/APIList1-Topic.html" class="active">API List v2.0</a></li>
-                            <li><a href="./Docs/Sidebar/Endpoints/End-Add.html" class="active">API and Scaling Docs</a></li>
+                            <li><a href="./Docs/Sidebar/API and Scaling Docs/End-Add.html" class="active">API and Scaling Docs</a></li>
                             <li><a href="./Docs/Sidebar/Contributing Guidelines/Contributing_Guidelines.html" class="active">Contributing Guidelines</a></li>
-                            <li><a href="#" class="active">LMS v1.0 Installation and Docs</a></li>
-                            <li><a href="#" class="active">LMS v1.0 User Access Role</a></li>
-                            <li><a href="#" class="active">LMS v2.0 Installation and Docs</a></li>
-                            <li><a href="#" class="active">LMS v2.0 User Access Role</a></li>
-                            <li><a href="#" class="active">WebXR v1.0 App Usage Manual</a></li>
-                            <li><a href="#" class="active">XR App Installation Guide</a></li>
-                            <li><a href="#" class="active">XR App Usage Manual</a></li>
+                            <li><a href="./Docs/Sidebar/LMS v1.0 Installation and Docs/Entity-Relationship-Diagram.html" class="active">LMS v1.0 Installation and Docs</a></li>
+                            <li><a href="./Docs/Sidebar/LMS v1.0 User Acces Role/v1.0.html" class="active">LMS v1.0 User Access Role</a></li>
+                            <li><a href="./Docs/Sidebar/LMS v2.0 Installation and Docs.html/Set-up local copy.html" class="active">LMS v2.0 Installation and Docs</a></li>
+                            <li><a href="./Docs/Sidebar/LMS v2.0 User Acces Role/LMS v2.0 User Acces Role.css" class="active">LMS v2.0 User Access Role</a></li>
+                            <li><a href="./Docs/Sidebar/WebXR v1.0 App Usage Manual/Mobile-App.html" class="active">WebXR v1.0 App Usage Manual</a></li>
+                            <li><a href="./Docs/Sidebar/XR App Installation Guide/HowUnity.html" class="active">XR App Installation Guide</a></li>
+                            <li><a href="./Docs/Sidebar/XR App Usage Manual/HowVR.html" class="active">XR App Usage Manual</a></li>
 
                         </ul>
                     </li>
