--- a/Home.html
+++ b/Home.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Stock Knowledge Home</title>
+    
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="Home/Header/topnav.css">
@@ -16,6 +17,7 @@
 </head>
 
 <header>
+    
     <div class="container-topnav">
         <nav class="d-flex1">
             <img src="./images/logo.svg">
@@ -146,12 +148,12 @@
                 <div class="article-center">
                     <i class="fa fa-user fa-5x"></i>
                     <h1>For Developers </h1>
-                    <a href="#">CLICK HERE</a>
+                    <a href="https://www.facebook.com/groups/1118893898545259">CLICK HERE</a>
                 </div>
                 <div class="article-right">
                     <i class="fa fa-user fa-5x"></i>
                     <h1>For Users</h1>
-                    <a href="#">CLICK HERE</a>
+                    <a href="https://www.facebook.com/groups/223308048231669">CLICK HERE</a>
                 </div>
             </div>
         </div>
