--- a/Home.html
+++ b/Home.html
@@ -101,19 +101,19 @@
             <div class="item">
                 <img src="images/01-lms.svg" alt="" class="img-fluid">
                 <div class="port-content">
-                    <a href="#">LMS Installation and Docs</a>
+                    <a href="./Docs/Sidebar/LMS v1.0 Installation and Docs/Entity-Relationship-Diagram.html">LMS Installation and Docs</a>
                 </div>
             </div>
             <div class="item">
                 <img src="images/02-user.svg" alt="" class="img-fluid">
                 <div class="port-content">
-                    <a href="#">User Access Role</a>
+                    <a href="./Docs/Sidebar/LMS v1.0 User Acces Role/v1.0.html">User Access Role</a>
                 </div>
             </div>
             <div class="item">
                 <img src="images/03-api.png" alt="" class="img-fluid">
                 <div class="port-content">
-                    <a href="#">API and Scalling Docs</a>
+                    <a href="./Docs/Sidebar/API and Scaling Docs/End-Add.html">API and Scalling Docs</a>
                 </div>
             </div>
         </div>
@@ -122,13 +122,13 @@
             <div class="item">
                 <img src="images/04-app.svg" alt="" class="img-fluid">
                 <div class="port-content">
-                    <a href="#">App Usage Manual</a>
+                    <a href="./Docs/Sidebar/XR App Usage Manual/HowVR.html">App Usage Manual</a>
                 </div>
             </div>
             <div class="item">
                 <img src="images/05-guidelines.svg" alt="" class="img-fluid">
                 <div class="port-content">
-                    <a href="#">Contributing Guidelines</a>
+                    <a href="./Docs/Sidebar/Contributing Guidelines/Contributing_Guidelines.html">Contributing Guidelines</a>
                 </div>
             </div>
         </div>
