--- a/Home.html
+++ b/Home.html
@@ -144,12 +144,12 @@
                     <p> Be a part of the <br> Stock Knowledge <br> community</p>
                 </div>
                 <div class="article-center">
-                    <i class="fa fa-user fa-5x"></i>
+                    <img src="images/Developer-icon.png" alt="">
                     <h1>For Developers </h1>
                     <a href="https://www.facebook.com/groups/1118893898545259">CLICK HERE</a>
                 </div>
                 <div class="article-right">
-                    <i class="fa fa-user fa-5x"></i>
+                    <img src="images/User-icon.png" alt="">
                     <h1>For Users</h1>
                     <a href="https://www.facebook.com/groups/223308048231669">CLICK HERE</a>
                 </div>
@@ -168,7 +168,7 @@
             </div>
             <div class="item">
                 <div class="footer-center">
-                    <a href="https://stockknowledge.org/">https://www.stockknowledge.org <br>stock.knowledge7@gmail.com</a>
+                    <a href="https://stockknowledge.org/">www.stockknowledge.org <br>stock.knowledge7@gmail.com</a>
                 </div>
             </div>
             <div class="item-social">
