--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,6 @@
 </head>
 
 <header>
-    
     <div class="container-topnav">
         <nav class="d-flex1">
             <img src="./images/logo.svg">
@@ -144,12 +143,12 @@
                     <p> Be a part of the <br> Stock Knowledge <br> community</p>
                 </div>
                 <div class="article-center">
-                    <img src="images/Developer-icon.png" alt="">
+                    <img src="images/Developer-icon.png">
                     <h1>For Developers </h1>
                     <a href="https://www.facebook.com/groups/1118893898545259">CLICK HERE</a>
                 </div>
                 <div class="article-right">
-                    <img src="images/User-icon.png" alt="">
+                    <img src="images/User-icon.png">
                     <h1>For Users</h1>
                     <a href="https://www.facebook.com/groups/223308048231669">CLICK HERE</a>
                 </div>
